[gd_scene load_steps=9 format=3 uid="uid://itoh3l6i5gv6"]

[ext_resource type="Script" path="res://scenes/GameManager.gd" id="1_vwl52"]
[ext_resource type="FontFile" uid="uid://btj6n4lkyrvnh" path="res://assets/font/pixelated-loveNew.ttf" id="2_uo6on"]

[sub_resource type="FontVariation" id="FontVariation_3151x"]
base_font = ExtResource("2_uo6on")

[sub_resource type="FontVariation" id="FontVariation_8todx"]
base_font = ExtResource("2_uo6on")

[sub_resource type="FontVariation" id="FontVariation_dndl5"]
base_font = ExtResource("2_uo6on")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34fwn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_2r0nf"]
base_font = ExtResource("2_uo6on")

[sub_resource type="FontVariation" id="FontVariation_xn7aw"]
base_font = ExtResource("2_uo6on")

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vwl52")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 564.0
offset_top = 43.0
offset_right = 672.0
offset_bottom = 177.0
scale = Vector2(0.23, 0.23)
theme_override_fonts/font = SubResource("FontVariation_3151x")
theme_override_font_sizes/font_size = 100
text = "01"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 18.0
offset_right = 229.0
offset_bottom = 152.0
scale = Vector2(0.23, 0.23)
theme_override_fonts/font = SubResource("FontVariation_8todx")
theme_override_font_sizes/font_size = 100
text = "0"

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 600.0
offset_right = 221.0
offset_bottom = 734.0
scale = Vector2(0.23, 0.23)
theme_override_fonts/font = SubResource("FontVariation_dndl5")
theme_override_font_sizes/font_size = 100
text = "3
"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
self_modulate = Color(0.0588235, 0.0588235, 0.0588235, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_34fwn")

[node name="GameOverText" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 305.0
offset_top = 166.0
offset_right = 840.0
offset_bottom = 300.0
theme_override_fonts/font = SubResource("FontVariation_2r0nf")
theme_override_font_sizes/font_size = 70
text = "Game Over!"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 478.0
offset_top = 337.0
offset_right = 667.0
offset_bottom = 386.0
theme_override_fonts/font = SubResource("FontVariation_xn7aw")
theme_override_font_sizes/font_size = 30
text = "MAIN MENU"

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 478.0
offset_top = 409.0
offset_right = 667.0
offset_bottom = 458.0
theme_override_fonts/font = ExtResource("2_uo6on")
theme_override_font_sizes/font_size = 30
text = "RESTART"
